@@ -60,7 +60,7 @@ an object must be one of a predefined set of values.
 \fIObjPtr\fR is compared against each of
 the strings in \fItablePtr\fR to find a match.  A match occurs if
 \fIobjPtr\fR's string value is identical to one of the strings in
-\fItablePtr\fR, or if it is a unique abbreviation
+\fItablePtr\fR, or if it is a non-empty unique abbreviation
 for exactly one of the strings in \fItablePtr\fR and the
 \fBTCL_EXACT\fR flag was not specified; in either case
 the index of the matching entry is stored at \fI*indexPtr\fR
