@@ -226,7 +226,7 @@ Tcl_GetIndexFromObjStruct(
      * Check if we were instructed to disallow abbreviations.
      */
 
-    if ((flags & TCL_EXACT) || (numAbbrev != 1)) {
+    if ((flags & TCL_EXACT) || (key[0] == '\0') || (numAbbrev != 1)) {
 	goto error;
     }
 
