@@ -70,8 +70,12 @@ test indexObj-2.8 {exact match of empty values: singleton case} testindexobj {
     list [catch {testindexobj 1 0 {} a} msg] $msg
 } {1 {bad token "": must be a}}
 test indexObj-2.9 {non-exact match of empty values: singleton case} testindexobj {
-    testindexobj 1 1 {} a
-} 0
+    # NOTE this is a special case.  Although the empty string is a
+    # unique prefix, we have an established history of rejecting
+    # empty lookup keys, requiring any unique prefix match to have
+    # at least one character.
+    list [catch {testindexobj 1 1 {} a} msg] $msg
+} {1 {bad token "": must be a}}
 
 test indexObj-3.1 {cache result to skip next lookup} testindexobj {
     testindexobj check 42
